# AI_Agent

./: .env.example  .gitignore  .ouroboros_eval_artifact.md  README.ko.md  README.md  _debug_crv.py  _debug_crv2.py  _debug_delimited.py  _debug_reader.py  package-lock.json  package.json  pyproject.toml  run_meeting.sh  visual_system_design.md
config/: routing_rules.yaml
docs/: SESSION_HANDOFF.md  architecture.md  automated-validation-commands.md  context-storage-boundary.md  diagnosis-report.md  discord-channel-function-matrix.md  discord-multibot-profiles.md  environment-dependency-verification.md  executor-investigation.md  lg-twins-shorts-pipeline-technical-design.md  live-discord-channel-cleanup-plan.md  live-verification.md  loop-context-compression-policy.md  openclaw-hybrid-integration.md  phase1-29-cross-phase-risk-audit.md  phase12-assistant-ux.md  phase12-discord-permission-hardening.md  phase12-live-operational-hardening-plan.md  phase12-live-smoke.md  phase12-opencode-live-smoke.md  phase12-token-rotation-decision.md  phase13-live-company-workflow-pilot-plan.md  phase13-live-company-workflow-pilot.md  phase14-multi-bot-operational-protocol-plan.md  phase14-multi-bot-operational-protocol.md  phase15-persistent-second-brain-knowledge-loop-plan.md  phase15-persistent-second-brain-knowledge-loop.md  phase16-autonomous-scheduling-kanban-operations-plan.md  phase16-autonomous-scheduling-kanban-operations.md  phase17-production-readiness-monitoring-recovery-plan.md  phase17-production-readiness-monitoring-recovery.md  phase18-live-kanban-autonomous-dispatch-plan.md  (+37 more)
(+598 files in other folders)
